# wuwa_quest_tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  pages.yml
Tools/: __main__.py  build_quest_tracker.py  dataset.py  db_loader.py  flatbuffers_parser.py  html_renderer.py  models.py
docs/: index.html  quest_tracker_zh.html
